...
      }
    },
    "pitch.abort.practice.confirm" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "End Practice" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "練習終了" } },
        "ko" : { "stringUnit" : { "state" : "translated", "value" : "연습을 끝낸다" } }
      }
    },
    "pitch.abort.practice.message" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Practice is not recorded. You will move straight to the next chapter." } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "練習は記録されません。すぐに次の章に進みます。" } },
...
